--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,16 +19,16 @@ jobs:
           java-version: '17'
           distribution: 'adopt'
 
-      - name: Compile discord-bot.java
-        run: javac discord-bot.java
+      - name: Set up Maven
+        run: mvn -B package --file pom.xml
 
-      - name: Package to JAR
+      - name: Build and package JAR
         run: |
-          mkdir -p out
-          jar cvfe out/discord-bot.jar DiscordBot discord-bot.class
-
+          mvn clean compile
+          mvn package
+          
       - name: Upload JAR artifact
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@4
         with:
           name: discord-bot
-          path: out/discord-bot.jar
+          path: target/discord-bot-1.0-SNAPSHOT.jar
